--- a/Page2/index.html
+++ b/Page2/index.html
@@ -16,6 +16,9 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
+    <div class="y-2-k-luvr">
+    <span><span class="y-2-k-luvr-span"> Y2K </span><span class="y-2-k-luvr-span2"> LUVR </span></span>
+</div>
     <div class="buttons">
       <button id="likeButton">I LIKE</button>
       <button id="turtleButton">TURTLES</button>
