--- a/Page2/index.html
+++ b/Page2/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles.css">
+  <!--link rel="stylesheet" href="./styles.css"-->
   <title>Document</title>
 </head>
 <body>
@@ -48,6 +48,6 @@
       <p>If you could take a time machine back to the summer of 1999, and ask any person familiar with a new cartoon called “SpongeBob SquarePants”, most of them would probably say it was another one of those shows that would just come and go, like many others at the time. Fast forward to nearly 30 years later, and it’s become one of the biggest entities in pop culture.</p>
     </section>
   </main>
-  <script src="scripts.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
