--- a/Page2/index.html
+++ b/Page2/index.html
@@ -38,7 +38,7 @@
         <img src="img/Napster-Featured.jpg" alt="Napster Image">
       </div>
       <h2>NAPSTER: FOR BETTER OR WORSE</h2>
-      <p>Napster created quite a ruckus when it was first introduced in 1999. Many were concerned that it would have negative effects on a artists’ ability to make money from their music, primarily because there wasn’t a clear agreement between the platform and artist/record label regarding how payment would be distributed once a consumer purchased music on the Napster platform. A few years later, iTunes was introduced to the world. As things continued to evolve, music eventually shifted to digital mp3 as a primary format for consumption. Nowadays, streaming platforms like Sportify and Apple Music have given all artists, professional or amateur, an opportunity release their music to the entire world.</p>
+      <p>Napster created quite a ruckus when it was first introduced in 1999. Many were concerned that it would have negative effects on a artists’ ability to make money from their music, primarily because there wasn’t a clear agreement between the platform and artist/record label regarding how payment would be distributed once a consumer purchased music on the Napster platform. A few years later, iTunes was introduced to the world. As things continued to evolve, music eventually shifted to digital mp3 as a primary format for consumption. Nowadays, streaming platforms like Spotify and Apple Music have given all artists, professional or amateur, an opportunity release their music to the entire world.</p>
     </section>
     <section id="spongebob">
       <div class="image-group">
