--- a/index.html
+++ b/index.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <link rel="stylesheet" href="style.css" />
-    </head>
-    <body>
-        <div class="cover-image">
-            <div class="overlap-wrapper">
-                <div class="overlap">
-                    <div class="rectangle"></div>
-                    <div class="group">
-                        <div class="overlap-group">
-                            <img class="from-the-crazy-town" src="img\From the Crazy Town debut album_ 1.png" />
-                            <img class="jammerlammy" src="img\jammerlammy 1.png" />
-                            <img class="j-axer" src="img/j_ axer 1.png" />
-                            <img class="nokia" src="img\Nokia 1.png" />
-                            <img class="afro-thunda" src="img\afro thunda 1.png" />
-                            <img class="ghost-in-the-shell" src="img\Ghost in the Shell (1995) 1.png" />
-                        </div>
+<head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+    <div class="cover-image">
+        <div class="overlap-wrapper">
+            <div class="overlap">
+                <div class="rectangle"></div>
+                <div class="group">
+                    <div class="overlap-group">
+                        <img class="from-the-crazy-town" src="img\From the Crazy Town debut album_ 1.png" />
+                        <img class="jammerlammy" src="img\jammerlammy 1.png" />
+                        <img class="j-axer" src="img/j_ axer 1.png" />
+                        <img class="nokia" src="img\Nokia 1.png" />
+                        <img class="afro-thunda" src="img\afro thunda 1.png" />
+                        <img class="ghost-in-the-shell" src="img\Ghost in the Shell (1995) 1.png" />
                     </div>
-                    <div class="frame">
-                        <p class="LUVR"><span class="text-wrapper">Y2K</span> <span class="span"> LUVR</span></p>
-                        <div class="div">ENTER THE MATRIX</div>
-                    </div>
+                </div>
+                <div class="frame">
+                    <p class="LUVR"><span class="text-wrapper">Y2K</span> <span class="span"> LUVR</span></p>
+                    <div class="div" id="enterTheMatrix">ENTER THE MATRIX</div>
                 </div>
             </div>
         </div>
-    </body>
+    </div>
+
+    <script src="scripts.js"></script>
+</body>
 </html>
