--- a/index2.html
+++ b/index2.html
@@ -11,14 +11,14 @@
   <header>
     <nav>
       <ul>
-        <li><a href="#home">Home</a></li>
+        <li><a href="index.html">Home</a></li> <!-- Updated link to index.html -->
         <li><a href="#about">About</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
     <div class="y-2-k-luvr">
-    <span><span class="y-2-k-luvr-span"> Y2K </span><span class="y-2-k-luvr-span2"> LUVR </span></span>
-</div>
+      <span><span class="y-2-k-luvr-span"> Y2K </span><span class="y-2-k-luvr-span2"> LUVR </span></span>
+    </div>
     <div class="buttons">
       <button id="likeButton">I LIKE</button>
       <button id="turtleButton">TURTLES</button>
